# Solar-System-Simulation

./: CMakeLists.txt  README.md
include/: camera.h  mesh.h  physics.h  render.h  shader.h  shape.h
include/glad/: glad.h
shaders/: fragmentShader.glsl  gridShader.glsl  gridVertexShader.glsl  vertexShader.glsl
src/: camera.c  main.c  mesh.c  physics.c  render.c  shader.c  shape.c
